jenkins/prepull.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: image-prepull-myapp
spec:
  selector:
    matchLabels:
      app: image-prepull-myapp
  template:
    metadata:
      labels:
        app: image-prepull-myapp
    spec:
      containers:
      - name: prepull
        image: my-registry/myapp:53
        command: ["sh", "-c", "echo image pulled"]
      restartPolicy: Always
